Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47822

ProtocolHandler is "null" in access\qhttpnetworkconnectionchannel.cpp

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.12.3, 5.14.0 Alpha
    • 5.5.0, 5.11.2
    • Network: SSL
    • None
    • MinGW 4.9.1 (Windows 7)
      Android (NDK r18)
    • e431a3ac027915dbfc0588f42f3b56e07639811e (qt/qtbase/5.12)

      Hi there,

      we use Qt 5.5.0 and OpenSSL 1.0.2d with RSA-PSK-Patch to connect a client to a server.
      The client gets the following crash with MinGW at an internal test-server. It works if we try the same example under Linux.

      As this is a testcase for our application we expect a correct "The host name did not match any of the valid hosts for this certificate" error.

      ASSERT: "!protocolHandler.isNull()" in file access\qhttpnetworkconnectionchannel.cpp, line 206
      

      I added an example project that is used for the "log.txt". The ssl_packages.pcap is the ssl network communication from the "log.txt" that can be decoded with wireshark.

        1. log.txt
          8 kB
          André Klitzing
        2. network.tar.gz
          2 kB
          André Klitzing
        3. ssl_packages.pcap
          3 kB
          André Klitzing
        4. backtraces.txt
          16 kB
          André Klitzing
        5. msvc_autos.png
          40 kB
          Hasan
        6. msvc_stacktrace.png
          82 kB
          Hasan
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            manordheim Mårten Nordheim
            misery André Klitzing
            Votes:
            3 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes